--- a/data/Data_Processing_and_Exploration.Rnw
+++ b/data/Data_Processing_and_Exploration.Rnw
@@ -206,11 +206,13 @@ Where R and D are radians and decimal degrees respectively. \\
 To calculate the distance:
 
 \begin{equation}
-	D(km) = \\
-	R \cdot \Bigg[2 \cdot \arcsin \Bigg(\min\bigg(1,
+	\begin{split}
+	& D(km) = \\
+	& R \cdot \Bigg[2 \cdot \arcsin \Bigg(\min\bigg(1,
 	\sqrt{\sin({\frac{Lat_{y1} - Lat_{y2}}{2}})^2 + \cos(Lat_{x1}) \cdot
 		\cos(Lat_{x2}) \cdot \sin({\frac{Lon_{x1} -
 				Lon_{x2}}{2})^2}}\bigg)\Bigg)\Bigg]
+\end{split}
 \end{equation}
 
 Where $R$ is the mean Radius of the Earth, 6 341 km. \\
@@ -566,20 +568,20 @@ The following details the total catch by year, by survey. As can be seen, the
 IE-IGFS, EVHOE, WCGFS, Q4SWIBTS and Q1SWBEAM catch reasonable quantities of
 gadoids, while the CARLHELMAR and NWGFS catch very little. \\
 
-<<TotalCatch, echo = F, fig.width = 6, fig.height = 4, fig.align = 'center'>>=
+<<TotalCatch, echo = F, fig.width = 6, fig.height = 8, fig.align = 'center'>>=
+
 tot <- group_by(Wt, Survey, Species, Year) %>% summarise(Kg = sum(Kg))
 
 print(ggplot(tot, aes(x = Year, y = Kg)) + geom_bar(stat = 'identity', aes(fill =
 								     Species))
-+ facet_wrap(~Survey))
-
++ facet_wrap(~Survey, ncol = 2) + theme(legend.position = 'bottom',
+					axis.text.x = element_text(angle =
+								   -90)))
 @
 
 The next pages detail the spatial catch distribution of the different species,
 followed by the catch per unit effort for the different survey series for each
-species. \\
-
-
+species. 
 
 \begin{landscape}
 
