--- a/data/Data_Processing_and_Exploration.Rnw
+++ b/data/Data_Processing_and_Exploration.Rnw
@@ -93,7 +93,7 @@ DF <- DF[DF$Species %in% spp,]
 # Plot
 ggplot(DF, aes(x = LngtClass, y = IndWgt)) + 
 	geom_point(aes(colour = factor(Year))) + 
-	facet_wrap(~Species, scale = 'free')
+	facet_wrap(~Species, scale = 'free') + theme_bw()
 @
 
 To simplify the fitting procedure, the von bertalanffy relationship in equation
@@ -110,7 +110,10 @@ To simplify the fitting procedure, the von bertalanffy relationship in equation
 DF$lWt <- log(DF$IndWgt)
 DF$lL  <- log(DF$LngtClass)
 
-ggplot(DF, aes(x = lL, y = lWt)) + geom_point(aes(colour = factor(Year))) + facet_wrap(~Species, scale = 'free' )
+ggplot(DF, aes(x = lL, y = lWt)) + 
+	geom_point(aes(colour = factor(Year))) + 
+	facet_wrap(~Species, scale = 'free' ) +
+	theme_bw()
 @
 
 A linear model with species and year as factors was fit using the \textit{glm}
@@ -154,10 +157,11 @@ print(corr.fact)
 predDF$WtCorr <- predDF$Wt * corr.fact
 
 # Plot the von bertalanffy fits
-ggplot(DF, aes(x = LngtClass, y = IndWgt)) + geom_point() +
+ggplot(DF, aes(x = LngtClass, y = IndWgt)) + geom_point(colour = 'grey') +
 	facet_wrap(~ Species, scale = 'free') + 
 	geom_line(data = predDF, aes(x = L, y = Wt), col = 'red') +
-        geom_line(data = predDF, aes(x = L, y = WtCorr), col = 'blue')
+        geom_line(data = predDF, aes(x = L, y = WtCorr), col = 'blue') +
+	theme_bw()
 
 ## Save the fit and the correction factor
 save(lm2, corr.fact, file = 'LengthWeightPredictGadoids.RData')
@@ -207,7 +211,7 @@ To calculate the distance:
 
 \begin{equation}
 	\begin{split}
-	& D(km) = \\
+	f D(km) = \\
 	& R \cdot \Bigg[2 \cdot \arcsin \Bigg(\min\bigg(1,
 	\sqrt{\sin({\frac{Lat_{y1} - Lat_{y2}}{2}})^2 + \cos(Lat_{x1}) \cdot
 		\cos(Lat_{x2}) \cdot \sin({\frac{Lon_{x1} -
@@ -268,43 +272,127 @@ To calculate the swept area, we first have to estimate the door spread for any
 records where it's missing. There were only 5 records with missing door spread,
 but use the predicted door spread for all records. \\
 
-<<DoorSpread, fig.width = 5, fig.height = 5, echo = F, fig.align = 'center'>>=
+<<DoorSpread, fig.width = 5, fig.height = 5, echo = F, warnings = F, fig.align = 'center'>>=
 
-plot(HH$DoorSpread[an(HH$DoorSpread) !=-9 & an(HH$Depth) != -9] ~
-     HH$Depth[an(HH$DoorSpread) !=-9 & an(HH$Depth) != -9], ylab = 'Door
-     spread', xlab = 'Depth', main = 'Relationship between depth of gear and
+# Covert numeric variables so we can explore the covariates
+HH$SweepLngt   <- as.numeric(HH$SweepLngt) ;  HH$HaulDur     <- as.numeric(HH$HaulDur)
+HH$DoorSpread  <- as.numeric(HH$DoorSpread) ; HH$Depth       <- as.numeric(HH$Depth)
+HH$Netopening  <- as.numeric(HH$Netopening) ; HH$Warplngt    <- as.numeric(HH$Warplngt)
+HH$Warpdia     <- as.numeric(HH$Warpdia) ;    HH$DoorSurface <- as.numeric(HH$DoorSurface)
+HH$DoorWgt     <- as.numeric(HH$DoorWgt) ;    HH$WingSpread  <- as.numeric(HH$WingSpread)
+HH$KiteDim     <- as.numeric(HH$KiteDim);     HH$TowDir      <- as.numeric(HH$TowDir)
+HH$GroundSpeed <- as.numeric(HH$GroundSpeed); HH$SpeedWater  <- as.numeric(HH$SpeedWater)
+HH$SurCurDir   <- as.numeric(HH$SurCurDir) ;  HH$SurCurSpeed <- as.numeric(HH$SurCurSpeed)
+HH$BotCurDir   <- as.numeric(HH$BotCurDir);   HH$BotCurSpeed <- as.numeric(HH$BotCurSpeed)
+HH$WindDir     <- as.numeric(HH$WindDir) ;    HH$WindSpeed   <- as.numeric(HH$WindSpeed)
+HH$SwellDir    <- as.numeric(HH$SwellDir) ;   HH$SwellHeight <- as.numeric(HH$SwellHeight)
+HH$SurTemp     <- as.numeric(HH$SurTemp) ;    HH$BotTemp     <- as.numeric(HH$BotTemp)
+HH$SurSal      <- as.numeric(HH$SurSal) ;     HH$BotSal      <- as.numeric(HH$BotSal)
+
+HH[HH == -9] <- NA
+
+ggplot(HH, aes(x = Depth, y = DoorSpread)) + geom_point() + 
+	theme_bw() + ggtitle('Relationship between depth of gear and
      door spread')
 
-Spread <- an(HH$DoorSpread[an(HH$DoorSpread) !=-9 & an(HH$Depth) != -9])
-Depth  <- an(HH$Depth[an(HH$DoorSpread) !=-9 & an(HH$Depth) != -9])
+@
+
+There may be another covariate affecting doorspread, indicated by the
+clustering of some of the data...lets look at some of them.
+
+<<DoorSpread2, fig.width = 5, fig.height = 5, echo = F, fig.align = 'center'>>=
+
+library(gridExtra)
+
+p1 <- ggplot(HH, aes(x = Depth, y = DoorSpread)) + geom_point(aes(colour = factor(DoorWgt))) +
+theme_bw() + ggtitle('..with door weight') + theme(legend.position = 'top')
+
+p2 <- ggplot(HH, aes(x = Depth, y = DoorSpread)) + geom_point(aes(colour = Warplngt)) + theme_bw() + 
+	ggtitle('..with warp length') + theme(legend.position = 'top')
+
+p3 <- ggplot(HH, aes(x = Depth, y = DoorSpread)) + geom_point(aes(colour = factor(Warpdia))) + theme_bw() + 
+	ggtitle('..with warp diameter') + theme(legend.position = 'top')
+
+p4 <- ggplot(HH, aes(x = Depth, y = DoorSpread)) + geom_point(aes(colour = factor(SweepLngt) )) + theme_bw() + 
+	ggtitle('..with warp sweep length') + theme(legend.position = 'top')
+
+grid.arrange(p1, p2, p3, p4, ncol = 2)
 
 @
 
 There looks to be a relationship between depth and doorspread where it
-increases to around 200 m and then flattens out.  We will model this
-relationship with a polynomial, fitting with different degrees. 
+increases to around 200 m and then flattens out, but with a covariate effect.
+We will model this relationship with a gam. 
 
-<<Doorspread2, results = 'asis'>>=
+<<Doorspread4, results = 'asis', echo = T, warnings = F>>=
 
-model2 <- lm(Spread ~ poly(Depth,2))
-model3 <- lm(Spread ~ poly(Depth,3))
-model4 <- lm(Spread ~ poly(Depth,4))
+library(mgcv)
 
-stargazer(model2, model3, model4, font.size  = 'small', align = T, 
-	  title = 'lm output from the three polynomial model fits', 
+# Without covariate
+m1 <- gam(DoorSpread ~ Depth, data = HH)
+#summary(m1)
+
+# With all covariate, no interactions
+m2 <- gam(DoorSpread ~ Depth + factor(DoorWgt) + Warplngt + factor(Warpdia) +
+	  factor(SweepLngt), data =   HH)
+#summary(m2)
+
+### full interactions
+m3 <- gam(DoorSpread ~ Depth * factor(DoorWgt) * Warplngt * factor(Warpdia) *
+	  factor(SweepLngt), data =   HH)
+#summary(m3)
+
+
+stargazer(m1, m2, m3, font.size  = 'small', align = T, 
+	  title = 'gam output from model with and without covariates', 
 	  table.placement = 'H')
+
+kable(AIC(m1, m2, m3))
+
 @
 
-Fourth order looks best as it has the highest $R^2$.  Now to plot of predicted
-door spread against the data for each depth.
+Full model looks best, but let's check the residuals against the covariates
+<<Residualcheck, fig.width = 4, fig.height = 4, echo = F, fig.align = 'center'>>=
+
+HHresid <- filter(HH, !is.na(DoorWgt), !is.na(Warplngt), 
+		  !is.na(Warpdia),  !is.na(SweepLngt), 
+		  !is.na(Depth), !is.na(DoorSpread))
+
+HHresid$residm3   <- resid(m3)
+HHresid$predictm3 <- fitted(m3)
+
+ggplot(HHresid, aes(x = predictm3, y = residm3)) + geom_point() +
+	geom_smooth(method = 'loess', col = 'red') +
+	theme_bw() + ggtitle('fitted values against residuals') +
+	geom_hline(yintercept = 0)
+
+p1 <- ggplot(HHresid, aes(x = factor(DoorWgt), y = residm3)) + geom_boxplot() +
+	theme_bw()
+
+p2 <- ggplot(HHresid, aes(x = Warplngt, y = residm3)) + geom_point() +
+	geom_smooth(method = 'loess', colour = 'red') + theme_bw() +
+	geom_hline(yintercept = 0)
+
+p3 <- ggplot(HHresid, aes(x = factor(Warpdia), y = residm3)) + geom_boxplot() +
+	theme_bw()
+
+p4 <- ggplot(HHresid, aes(x = factor(SweepLngt), y = residm3)) + geom_boxplot() +
+	theme_bw()
+
+grid.arrange(p1, p2, p3, p4, ncol = 2)
+
+@
+
+Residuals look OK, so let's check the predictions against the measurements...
 
 <<Doorspread3, fig.width = 5, fig.height = 5, echo = F, fig.align = 'center'>>=
 
-pred <- predict(model4, newdata = data.frame(Depth = seq(min(Depth), max(Depth), l = 1000), 
-					    Spread = seq(min(Spread), max(Spread), l = 1000)))
+HH$PredSpread <- predict(m3, newdata = HH)
 
-plot(Spread ~ Depth)
-lines(pred, col = 'red')
+ggplot(HH, aes(x = DoorSpread, y = PredSpread )) + geom_point(colour = 'grey') +
+	geom_abline(slope = 1, intercept = 0, col = 'red') + theme_bw() +
+	ylab('Predicted door spread') + xlab('Measured door spred') +
+	ggtitle('Door spread predictions against measurements')
 
 @
 
@@ -321,7 +409,6 @@ et al as 0.38 for otter trawl gears. \textcolor{red}{ADD REF}
 
 <<SweptArea, echo = F, fig.align = 'center', fig.height = 5, fig.width = 5>>=
 
-HH$PredSpread <- predict(model4, newdata = data.frame(Depth = an(HH$Depth), Spread = an(HH$DoorSpread)))
 HH$SweptArea <- HH$Dist * HH$PredSpread/1000
 
 HH$SweptAreaAdjFac <- 0.38
@@ -678,60 +765,11 @@ print(ggplot(plotDF, aes(x = Length, y = n)) + geom_line(aes(colour = Survey)) +
 
 \subsection{Conclusion on survey availability}
 
-Having reviewed the available survey data, its concluded that coverage prior to
-1992 was patchy and incomplete. Further, the CARLHELMAR and NWGFS surveys are
-focused on flatfish catches, with little information on gadoid species. As
-such, the dataset is truncated to include only the years 1992 - 2015 and the
-surveys: WCGFS, EVHOE, IE-IGFS, Q4SWIBTS, Q1SWBEAM. The following survey
-location plots and CPUEs show that the revised dataset gives good spatial
-coverage and information from the surveys. \\
-
-\begin{landscape}
-
-<<Revised Survey locations, out.width = '1\\linewidth', fig.width = 12, fig.height = 9,echo = F>>=
-
-Stations <- filter(Stations, Year %in% 1992:2015, Survey %in% c('WCGFS',
-								'EVHOE',
-								'IE-IGFS',
-								'Q4SWIBTS',
-								'Q1SWBEAM'))
-
-print(ggplot() + 
-	geom_polygon(data = map, aes(x = long, y = lat, group = group), colour = 'black', fill = 'grey') +
-	coord_fixed(xlim = c(-12, 2), ylim = c(48, 52), ratio = 1.3) + 
-	geom_point(data  = Stations, aes(x = Lon, y = Lat, colour = Survey), shape = '+') + 
-	facet_wrap(~ Year, ncol = 5) +
-	theme_classic()+ ggtitle('Survey locations by year and survey (revised)'))
-
-Wt <- filter(Wt, Year %in% 1992:2015, Survey %in% c('WCGFS',
-						    'EVHOE',
-						    'IE-IGFS',
-						    'Q4SWIBTS',
-						    'Q1SWBEAM'))
-
-
-cpue <- group_by(Wt, Survey, Year, Species) %>% summarise(q05 = quantile(Kg/HaulDur * 60, prob = 0.05, na.rm = T),
-							  q50 = quantile(Kg/HaulDur * 60, prob = 0.50, na.rm = T),
-							  mean = mean(Kg/HaulDur * 60,na.rm = T),
-							  q95 = quantile(Kg/HaulDur * 60, prob = 0.95, na.rm = T))
-
-print(ggplot(cpue, aes(x = Year, y = mean)) + geom_line(aes(group = Survey, colour = Survey)) +
-	facet_wrap(~Species, ncol = 1, scale = 'free_y') + theme(axis.text.x = element_text(angle = -90)) +
-	ylab('Kg per hour tow') + xlab('') + ggtitle('CPUE (Kg per hour tow) - revised surveys only'))
-
-cpsa <- group_by(Wt, Survey, Year, Species) %>% summarise(q05 = quantile(Kg/SweptArea, prob = 0.05, na.rm = T),
-							  q50 = quantile(Kg/SweptArea, prob = 0.50, na.rm = T),
-							  mean = mean(Kg/SweptArea,na.rm = T),
-							  q95 = quantile(Kg/SweptArea, prob = 0.95, na.rm = T))
-
-print(ggplot(cpue, aes(x = Year, y = mean)) + geom_line(aes(group = Survey, colour = Survey)) +
-	facet_wrap(~Species, ncol = 1, scale = 'free_y') + theme(axis.text.x = element_text(angle = -90)) +
-	ylab('Density (catch per km2 swept)') + xlab('') + ggtitle('CPUE (Catch per km2 swept area - revised surveys only'))
-
-
-@
-
-\end{landscape}
+Having reviewed the available survey data, coverage prior to 1992 was patchy
+and incomplete and the CARLHELMAR and NWGFS surveys are focused on flatfish
+catches, with little information on gadoid species. Therefore it will be
+important to check model diagnostics to entire the characteristics are being
+treated appropriately. However, all the data will be kept for the first runs.\\
 
 \section{Habitat covariates}
 
